examples/bad/12-05-add-types.see
void main() {
    int x = 21 + toStr(15);
    string = "Hi, " + toInt("15") + true;

    return;
}